--- a/src/app/app-start/app-start.component.html
+++ b/src/app/app-start/app-start.component.html
@@ -2,7 +2,7 @@
   <div class="row image-shadow justify-content-center align-items-center">
     <button
       routerLink="game"
-      class="btn btn-info col px-5 rounded-pill border-dark btn-shadow"
+      class="btn btn-info col-auto px-5 rounded-pill border-dark btn-shadow"
     >
       PLAY
     </button>
