--- a/src/app/data/players/player-item/player-item.component.html
+++ b/src/app/data/players/player-item/player-item.component.html
@@ -1,10 +1,9 @@
-<div class="row">
-  <div class="col-12 mt-2 text-center">
+<div class="row px-3">
+  <div class="card-title col-12 mt-2 text-center">
     <h4>{{ player.playerId }}</h4>
-    <hr/>
   </div>
   <img
-    class="img-responsive m-3 mt-0 border border-dark"
+    class="img-responsive mb-3 mt-0 border border-dark"
     width="100"
     height="100"
     [src]="
