--- a/src/app/data/players/players.component.css
+++ b/src/app/data/players/players.component.css
@@ -1,4 +1,6 @@
 .player-card {
+  background-color: rgba(44, 178, 188, 0.8);
+  color: rgb(255, 255, 255);
   -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.7);
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.7);
