Data bind update
Player1 and Player2 data call in Legs button

--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -31,7 +31,7 @@
       >
         <li [ngbNavItem]="1">
           <a ngbNavLink
-            ><h4>{{ leg.player1Throws[0].playerId }}</h4></a
+            ><h4>{{ player1Id }}</h4></a
           >
           <ng-template ngbNavContent>
             <div
@@ -110,7 +110,7 @@
         </li>
         <li [ngbNavItem]="2">
           <a ngbNavLink
-            ><h4>{{ leg.player2Throws[0].playerId }}</h4></a
+            ><h4>{{ player2Id }}</h4></a
           >
           <ng-template ngbNavContent>
             <div
