Score calculator update
Make a function caller with for loop

--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -53,7 +53,7 @@
                       <h5>Points left</h5>
                     </div>
                     <div class="col-12 mt-2 text-center">
-                      <h1 class="digit-text m-0">{{ 501 }}</h1>
+                      <h1 class="digit-text m-0">{{ scoreCalculator(leg.player1Throws, roundPage) }}</h1>
                     </div>
                   </div>
                   <div
@@ -132,7 +132,7 @@
                       <h5>Points left</h5>
                     </div>
                     <div class="col-12 mt-2 text-center">
-                      <h1 class="digit-text m-0">{{ 501 }}</h1>
+                      <h1 class="digit-text m-0">{{ scoreCalculator(leg.player2Throws, roundPage) }}</h1>
                     </div>
                   </div>
                   <div
