--- a/src/app/app-start/app-start.component.html
+++ b/src/app/app-start/app-start.component.html
@@ -1,10 +1,10 @@
 <div class="start-page h-100">
   <div class="row image-shadow justify-content-center align-items-center">
-    <button
-      routerLink="game"
-      class="btn btn-info col-auto px-5 rounded-pill border-dark btn-shadow"
-    >
-      PLAY
-    </button>
+    <div id="play-button-container" class="btn-shadow">
+      <div id="play-button-text"> PLAY</div>
+      <div id="play-button-circle">
+        <div id="play-button-arrow"></div>
+      </div>
+    </div>
   </div>
 </div>
