--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="scorePanelActive">
   <div class="col-12">
     <h6 class="text-center">Number of leg</h6>
   </div>
