--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 <div class="collapse navbar-collapse" id="navbar-content">
 <ul class="navbar-nav">
   <li class="nav-item">
-    <a routerLink="/game" class="nav-link">New match</a>
+    <a routerLink="/game" class="nav-link">Game</a>
   </li>
   <li class="nav-item">
     <a routerLink="/informations" class="nav-link">Informations</a>
