--- a/src/app/app-start/app-start.component.html
+++ b/src/app/app-start/app-start.component.html
@@ -1,6 +1,6 @@
 <div class="start-page h-100">
   <div class="row image-shadow justify-content-center align-items-center">
-    <div id="play-button-container" class="btn-shadow">
+    <div routerLink="/game" id="play-button-container" class="btn-shadow">
       <div id="play-button-text"> PLAY</div>
       <div id="play-button-circle">
         <div id="play-button-arrow"></div>
