Main and feature update
Main: create the new game page and the post request

Feature: in the new game page if have a new game and loaded info, then have a button, that switched between the two sides

--- a/src/app/game/new-game-panel/new-game-panel.component.css
+++ b/src/app/game/new-game-panel/new-game-panel.component.css
@@ -1,3 +1,16 @@
+select.ng-invalid.ng-touched, input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+
+.choose-a-player-title {
+  background-color: rgb(175, 175, 175);
+  color: white;
+}
+
+option.choose-a-player-item:disabled {
+  background-color: rgb(255, 180, 180);
+}
+
 .new-game-footer {
   background-color: rgb(36, 209, 163);
 }
