--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -1,5 +1,8 @@
 <div class="row">
   <div class="col-12">
+    <button class="row w-100" [disabled]="actualGame&&!loadedMatch || !actualGame&&loadedMatch" (click)="changeActualAndLoaded ? loadActualGame() : loadMatchDetails(); OnChangeActualAndLoaded();" [value]="">{{ changeActualAndLoaded ? "Actual game" : "Last loaded match info" }}</button>
+  </div>
+  <div class="col-12">
     <h6 class="text-center">Number of leg</h6>
   </div>
   <div class="col-12">
