--- a/src/app/data/players/player-item/player-item.component.html
+++ b/src/app/data/players/player-item/player-item.component.html
@@ -4,6 +4,7 @@
   </div>
   <img
     class="img-responsive mb-3 mt-0 border border-dark"
+    style="background-color: rgb(255, 255, 255);"
     width="100"
     height="100"
     [src]="
