--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -29,12 +29,12 @@
       <ul
         ngbNav
         #nav="ngbNav"
-        [activeId]="1"
+        [activeId]="player1TheNext || player2TheNext"
         class="nav-tabs col-12 px-4 justify-content-start"
       >
-        <li [ngbNavItem]="1">
+        <li [ngbNavItem]="player1TheNext">
           <a ngbNavLink
-            ><h4>{{ player1Id }}</h4></a
+            ><h4>{{ match.player1.playerId }}</h4></a
           >
           <ng-template ngbNavContent>
             <div
@@ -83,16 +83,20 @@
                     </div>
                   </div>
                   <div class="row justify-content-center mt-4">
-                    <img src="../../../assets/dart-miss.png" class="dart-point mx-2 p-0 border border-white" alt="Photo of actual dart">
-                    <div class="col-auto dart-point mx-2 p-0 border border-white">
+                    <div class="dart-point mx-2 p-0">
+                      <img *ngIf="!round.darts[0] && !round.darts[1] && !round.darts[2] ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
                     </div>
-                    <div class="col-auto dart-point mx-2 p-0 border border-white">
+                    <div class="dart-point mx-2 p-0">
+                      <img *ngIf="round.darts[1] && !round.darts[1] && !round.darts[2] ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
+                    </div>
+                    <div class="dart-point mx-2 p-0">
+                      <img *ngIf="round.darts[0] && round.darts[1] && !round.darts[2] ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 mt-5">
+            <div class="col-12 mt-5" *ngIf="leg.player1Throws.length === 0 ? false : true">
               <div class="row justify-content-center">
                 <ngb-pagination
                   [collectionSize]="leg.player1Throws.length"
@@ -105,15 +109,18 @@
                 >
                 </ngb-pagination>
               </div>
+              <div class="row justify-content-center mb-4">
+                <h6>Number of round</h6>
+              </div>
             </div>
-            <div class="col-12 mb-4">
-              <h6 class="text-center">Number of round</h6>
-            </div>
+            <ng-template class="col-12" [ngIf]="leg.player1Throws.length === 0 ? true : false">
+              <h1>Do you continue the game?</h1>
+            </ng-template>
           </ng-template>
         </li>
-        <li [ngbNavItem]="2">
+        <li [ngbNavItem]="player2TheNext">
           <a ngbNavLink
-            ><h4>{{ player2Id }}</h4></a
+            ><h4>{{ match.player2.playerId }}</h4></a
           >
           <ng-template ngbNavContent>
             <div
@@ -196,6 +203,7 @@
   </div>
   <div class="score-panel-footer col-12 align-self-end px-4 py-3">
     <button class="btn btn-info px-5 rounded-pill border-dark btn-shadow" (click)="onNewGame(false)">New game</button>
-    <button class="btn btn-info px-5 rounded-pill border-dark btn-shadow">Add throw</button>
+    <button *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? false : true" class="btn btn-info px-5 rounded-pill border-dark btn-shadow">Add throw</button>
   </div>
 </div>
+<span *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? true : false" id="closed-match" class="help-block"><h1>This game is over!</h1></span>
