--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -97,7 +97,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 mt-5" *ngIf="actualGame">
+            <div class="col-12 mt-5">
               <div class="row justify-content-center">
                 <ngb-pagination
                   [collectionSize]="leg.player1Throws.length"
@@ -204,7 +204,7 @@
   </div>
   <div class="score-panel-footer col-12 align-self-end px-4 py-3">
     <button class="btn btn-info px-5 rounded-pill border-dark btn-shadow" (click)="onNewGame(false)">New game</button>
-    <button *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score || actualGame ? false : true" class="btn btn-info px-5 rounded-pill border-dark btn-shadow" (click)="onContinueGame()">Continue game</button>
+    <button *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score || !changeActualAndLoaded ? false : true" class="btn btn-info px-5 rounded-pill border-dark btn-shadow" (click)="onContinueGame()">Continue game</button>
   </div>
 </div>
 <span *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? true : false" id="closed-match" class="help-block"><h1>This game is over!</h1></span>
