--- a/src/app/game/new-game-panel/new-game-panel.component.html
+++ b/src/app/game/new-game-panel/new-game-panel.component.html
@@ -51,7 +51,7 @@
           </button>
           <button
             class="btn btn-info px-5 rounded-pill border-dark btn-shadow"
-            [disabled]="!loadedMatch"
+            [disabled]="loadedMatch || actualGame ? false : true"
             (click)="onBackToScorePanel(true)"
           >
             Back
