--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -84,16 +84,16 @@
                   </div>
                   <div class="row justify-content-center mt-4">
                     <div class="dart-point mx-2 p-0">
-                      <img *ngIf="!round.darts[0] && !round.darts[1] && !round.darts[2] ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
+                      <img *ngIf="dartsThrowNumber === 0 ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
                     </div>
                     <div class="dart-point mx-2 p-0">
-                      <img *ngIf="round.darts[1] && !round.darts[1] && !round.darts[2] ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
+                      <img *ngIf="dartsThrowNumber === 1 ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
                     </div>
                     <div class="dart-point mx-2 p-0">
-                      <img *ngIf="round.darts[0] && round.darts[1] && !round.darts[2] ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
+                      <img *ngIf="dartsThrowNumber === 2 ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
                     </div>
                   </div>
-                  <button *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? false : true" [disabled]="round.darts.length === 3 && player1TheNext ? false: true" class="btn btn-info px-5 rounded-pill border-dark btn-shadow">Add throw</button>
+                  <button *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? false : true" [disabled]="dartsThrowNumber !== 3" class="btn btn-info px-5 rounded-pill border-dark btn-shadow">Add throw</button>
                 </div>
               </div>
             </div>
@@ -176,6 +176,14 @@
                     <div class="col-auto dart-point mx-2 p-0 border border-white">
                     </div>
                   </div>
+                  <button
+                    class="btn btn-info px-5 rounded-pill border-dark btn-shadow"
+                    *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? false : true"
+                    [disabled]="dartsThrowNumber !== 3"
+                    (click)="onAddThrow()"
+                    >
+                    Add throw
+                  </button>
                 </div>
               </div>
             </div>
