--- a/src/app/game/score-panel/score-panel.component.html
+++ b/src/app/game/score-panel/score-panel.component.html
@@ -93,7 +93,14 @@
                       <img *ngIf="dartsThrowNumber === 2 ? true : false" src="../../../assets/dart-miss.png" class="img-responsive" alt="Photo of actual dart">
                     </div>
                   </div>
-                  <button *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? false : true" [disabled]="dartsThrowNumber !== 3" class="btn btn-info px-5 rounded-pill border-dark btn-shadow">Add throw</button>
+                  <button
+                    class="btn btn-info px-5 rounded-pill border-dark btn-shadow"
+                    *ngIf="match.legsToWin === match.player1Score || match.legsToWin === match.player2Score ? false : true"
+                    [disabled]="dartsThrowNumber !== 3"
+                    (click)="onAddThrow()"
+                    >
+                    Add Throw
+                  </button>
                 </div>
               </div>
             </div>
